First commit. The nav bar is complete. Content in middle almost done.

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="/screen.css">
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <header id="heading">
+        <nav class="top-nav">
+          <img src="images/octodexLogo.png" alt="Logo" height="22">
+          <ul>
+            <li><a href="#">RSS</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Back to Github</a></li>
+          </ul>
+        </nav>
+    </header>
+        <section class="cats">
+          <section class="cat">
+            <img src="https://octodex.github.com/images/boxertocat_octodex.jpg" alt="cat1">
+            <ul>
+              <li><p>#143</p></li>
+              <li><p class="cat-img-title"><span>the</span><a href="#">Boxertocat</a><span>by</span></p></li>
+            </ul>
+          </section>
+        </section>
   </body>
 </html>
