--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,96 @@
 <!DOCTYPE html>
 <html>
-  <head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Octodex Site CP</title>
-    <link rel="stylesheet" href="/screen.css">
-  </head>
-  <body>
-    <header id="heading">
-        <nav class="top-nav">
-          <img src="images/octodexLogo.png" alt="Logo" height="22">
-          <ul>
-            <li><a href="#">RSS</a></li>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">Back to Github</a></li>
-          </ul>
-        </nav>
-    </header>
-        <section class="cats">
-          <section class="cat">
-            <img src="https://octodex.github.com/images/boxertocat_octodex.jpg" alt="cat1">
-            <ul>
-              <li><p>#143</p></li>
-              <li><p class="cat-img-title"><span>the</span><a href="#">Boxertocat</a><span>by</span></p></li>
-            </ul>
-          </section>
-        </section>
-  </body>
+
+<head lang="en">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Octodex Site CP</title>
+  <link rel="stylesheet" href="/screen.css">
+</head>
+
+<body>
+  <header id="heading">
+    <nav class="top-nav">
+      <img src="images/octodexLogo.png" alt="Logo" height="22">
+      <ul>
+        <li>
+          <a href="#">RSS</a>
+        </li>
+        <li>
+          <a href="#">FAQ</a>
+        </li>
+        <li>
+          <a href="#">Back to Github</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <section class="cats">
+    <section class="cat">
+      <img src="https://octodex.github.com/images/boxertocat_octodex.jpg" alt="cat1">
+      <ul>
+        <li>
+          <p>#143</p>
+        </li>
+        <li class="cat-img-title">
+
+          <span>the</span>
+          <a href="#">Boxertocat</a>
+          <span>by</span>
+          <img src="https://github.com/rubyjazzy.png" alt="somedude" id="cat-creator-img">
+
+        </li>
+      </ul>
+    </section>
+    <section class="cat">
+      <img src="https://octodex.github.com/images/surftocat.png" alt="cat2">
+      <ul>
+        <li>
+          <p>#142</p>
+        </li>
+        <li class="cat-img-title">
+
+          <span>the</span>
+          <a href="#">Surftocat</a>
+          <span>by</span>
+          <img src="https://github.com/jeejkang.png" alt="somedude" id="cat-creator-img">
+
+        </li>
+      </ul>
+    </section>
+    <section class="cat">
+      <img src="https://octodex.github.com/images/hula_loop_octodex03.gif" alt="cat3">
+      <ul>
+        <li>
+          <p>#141</p>
+        </li>
+        <li class="cat-img-title">
+
+          <span>the</span>
+          <a href="#">Hulatocat</a>
+          <span>by</span>
+          <img src="https://github.com/heyhayhay.png" alt="somedude" id="cat-creator-img">
+
+        </li>
+      </ul>
+    </section>
+    <section class="cat">
+      <img src="https://octodex.github.com/images/scubatocat.png" alt="cat1">
+      <ul>
+        <li>
+          <p>#140</p>
+        </li>
+        <li class="cat-img-title">
+
+          <span>the</span>
+          <a href="#">Scubatocat</a>
+          <span>by</span>
+          <img src="https://github.com/cameronfoxly.png" alt="somedude" id="cat-creator-img">
+
+        </li>
+      </ul>
+    </section>
+  </section>
+</body>
+
 </html>
